rhai/codegen/ui_tests/rhai_fn_global_multiple.stderr
error: namespace is already set to 'global'
  --> $DIR/rhai_fn_global_multiple.rs:12:23
   |
12 |     #[rhai_fn(global, internal)]
   |                       ^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_global_multiple.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
